syntax = "proto3";

package likechain.likenft;

import "gogoproto/gogo.proto";

option go_package = "github.com/likecoin/likechain/x/likenft/types";

// Params defines the parameters for the module.
message Params {
  option (gogoproto.goproto_stringer) = false;

  string price_denom = 1;
}
